--- a/MyTodoList/MainStoryboard.storyboard
+++ b/MyTodoList/MainStoryboard.storyboard
@@ -194,6 +194,12 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2015-10-13" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4BK-2J-gKJ">
+                                                    <rect key="frame" x="109" y="12" width="178" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -218,7 +224,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ukC-Bu-4xo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2310" y="-179"/>
+            <point key="canvasLocation" x="2310" y="-181"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="LFb-Bx-d5t">
@@ -247,12 +253,42 @@
                     <view key="view" contentMode="scaleToFill" id="nSp-r2-dX7">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y9L-3W-QfM">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="279"/>
+                                <state key="normal" title="完了">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="closePickerView:" destination="sF3-R2-pJC" eventType="touchUpInside" id="Emk-r4-bEk"/>
+                                </connections>
+                            </button>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="3ZR-sn-syC">
+                                <rect key="frame" x="0.0" y="318" width="320" height="162"/>
+                                <date key="date" timeIntervalSinceReferenceDate="441822831.88233298">
+                                    <!--2015-01-01 16:33:51 +0000-->
+                                </date>
+                            </datePicker>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oFc-FO-fYp">
+                                <rect key="frame" x="0.0" y="287" width="123" height="30"/>
+                                <state key="normal" title="設定しない">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="deleteButtonAction:" destination="sF3-R2-pJC" eventType="touchUpInside" id="hy3-we-r6N"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <toolbarItems>
                         <barButtonItem title="Item" id="k4L-rq-kxt"/>
                     </toolbarItems>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="closeButton" destination="y9L-3W-QfM" id="Pkg-FK-UuE"/>
+                        <outlet property="datePicker" destination="3ZR-sn-syC" id="jBj-R2-LFO"/>
+                        <outlet property="deleteButton" destination="oFc-FO-fYp" id="DbW-mA-haV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uOS-PE-fGc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
