--- a/MyTodoList/MainStoryboard.storyboard
+++ b/MyTodoList/MainStoryboard.storyboard
@@ -115,8 +115,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="TODO追加" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="IoL-BP-WsN">
+                                <rect key="frame" x="10" y="72" width="300" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="yes" spellCheckingType="yes" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                                <connections>
+                                    <action selector="todoTextEditingDidEnd:" destination="E9z-Je-05M" eventType="editingDidEndOnExit" id="Si4-cm-9DI"/>
+                                </connections>
+                            </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="WZ0-Sh-aF2">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                                <rect key="frame" x="0.0" y="110" width="320" height="370"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TodoListPropertyCell" textLabel="5yq-cF-fcb" style="IBUITableViewCellStyleDefault" id="dO0-Q3-HDT">
@@ -148,18 +156,19 @@
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Title" id="FSL-9S-ECN">
                         <barButtonItem key="leftBarButtonItem" image="reveal-icon.png" style="plain" id="bUs-o5-J8W"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ei6-RS-g0a">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" style="done" id="Ei6-RS-g0a">
                             <connections>
-                                <action selector="addItem:" destination="E9z-Je-05M" id="SeV-R0-wtc"/>
+                                <action selector="editButtonAction:" destination="E9z-Je-05M" id="9o4-RZ-f6A"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="addItem" destination="Ei6-RS-g0a" id="7Oc-us-End"/>
+                        <outlet property="editButton" destination="Ei6-RS-g0a" id="NAz-Kc-0pg"/>
                         <outlet property="revealButtonItem" destination="bUs-o5-J8W" id="Cm1-JV-731"/>
                         <outlet property="tableView" destination="WZ0-Sh-aF2" id="oVU-W8-cOg"/>
+                        <outlet property="todoTextField" destination="IoL-BP-WsN" id="ilg-km-DK8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="thA-fT-bca" userLabel="First Responder" sceneMemberID="firstResponder"/>
