--- a/MyTodoList/MainStoryboard.storyboard
+++ b/MyTodoList/MainStoryboard.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Reveal View Controller-->
@@ -191,6 +192,30 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CellMemo" rowHeight="86" id="8fA-Or-95U">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8fA-Or-95U" id="CEc-T3-GcW">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="1" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lmE-pT-oVh">
+                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="100" id="pUD-fF-hvR"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="lmE-pT-oVh" secondAttribute="bottom" constant="5" id="IcE-iQ-Esv"/>
+                                                <constraint firstItem="lmE-pT-oVh" firstAttribute="leading" secondItem="CEc-T3-GcW" secondAttribute="leadingMargin" constant="5" id="Jai-Vk-77n"/>
+                                                <constraint firstItem="lmE-pT-oVh" firstAttribute="top" secondItem="CEc-T3-GcW" secondAttribute="topMargin" constant="5" id="RYA-zf-x1d"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="lmE-pT-oVh" secondAttribute="trailing" constant="5" id="VXU-w9-QAw"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="CellLimited" id="rE0-oo-Mp8">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
@@ -203,7 +228,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2015-10-13" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4BK-2J-gKJ">
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2015-10-13" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4BK-2J-gKJ">
                                                     <rect key="frame" x="109" y="12" width="178" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -217,17 +242,15 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="YIm-09-A5I">
-                        <barButtonItem key="leftBarButtonItem" title="Close" id="AMT-dJ-TqS">
+                    <navigationItem key="navigationItem" title="Title" id="kgN-cw-aEf">
+                        <barButtonItem key="leftBarButtonItem" title="Close" id="Khv-Yt-KuW">
                             <connections>
-                                <action selector="closeButton:" destination="Zwh-ri-o4p" id="geV-89-Udq"/>
+                                <action selector="closeButton:" destination="Zwh-ri-o4p" id="5XN-vI-9LW"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="closeButton" destination="AMT-dJ-TqS" id="Hlc-0r-uUt"/>
-                        <outlet property="navigationItem" destination="YIm-09-A5I" id="oTa-1x-4ry"/>
                         <outlet property="tableView" destination="WGG-Il-4xg" id="WHh-QP-iFx"/>
                     </connections>
                 </viewController>
